--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
     "outDir": "dist",
-    "noImplicitAny": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "esModuleInterop": true,
-    "rootDirs": ["src", "tests"],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
-    },
-    "plugins": [
-      {
-        "transform": "typescript-transform-paths"
-      }
-    ]
+      "@/*": [
+        "*"
+      ]
+    }
   },
-  "include": ["src", "tests"]
+  "ts-node": {
+    "esm": true,
+    "require": [
+      "tsconfig-paths/register"
+    ],
+  },
 }
